--- a/src/MakoIoT.Core.Configuration.MetadataGenerator/MakoIoT.Core.Configuration.MetadataGenerator.csproj
+++ b/src/MakoIoT.Core.Configuration.MetadataGenerator/MakoIoT.Core.Configuration.MetadataGenerator.csproj
@@ -8,11 +8,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="ICSharpCode.Decompiler" Version="7.2.1.6856" />
+    <PackageReference Include="ICSharpCode.Decompiler" Version="8.0.0.7345" />
+    <PackageReference Include="MakoIoT.Core.Configuration.Model" Version="1.0.22.11443" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\..\Shared\MakoIoT.ConfigurationApi.Model\MakoIoT.ConfigurationApi.Model.csproj" />
+    <PackageReference Update="Nerdbank.GitVersioning" Version="3.6.133" />
   </ItemGroup>
 
 </Project>
